CMakeLists correct. Now copy the res directory.
Mod: CMakeList.txt :: Add res directory copy.
Mod: denavit.cpp   :: Remove parameters cout.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,8 @@ set(CMAKE_CXX_FLAG "-g -Wall")
 file(GLOB SOURCE_FILE *.cpp)
 add_executable(robotarm ${SOURCE_FILE})
 target_link_libraries(robotarm ${OPENGL_LIBRARY} ${GLUT_LIBRARY})
+
+execute_process(COMMAND ${CMAKE_COMMAND} -E copy_directory
+    ${CMAKE_SOURCE_DIR}/res
+
+     ${CMAKE_BINARY_DIR}/res)
