Better code comment. Enjoy this. :D

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,5 +12,5 @@ target_link_libraries(robotarm ${OPENGL_LIBRARY} ${GLUT_LIBRARY})
 
 execute_process(COMMAND ${CMAKE_COMMAND} -E copy_directory
     ${CMAKE_SOURCE_DIR}/res
-
-    ${CMAKE_BINARY_DIR}/res)
+    ${CMAKE_BINARY_DIR}/res
+)
